# QtWebAppLib

./: CMakeLists.txt  README.md
doc/: releasenotes.txt
